# uned_limo_gazebo

./: CMakeLists.txt  README.md  package.xml
limo_bringup/launch/circuito/: circuito_limo_ackerman.launch.py  circuito_limo_four_diff.launch.py  circuito_multi_limo_ackerman.launch.py  circuito_multi_limo_four_diff.launch.py
limo_bringup/launch/laboratorio/: laboratorio_limo_ackerman.launch.py  laboratorio_limo_four_diff.launch.py  laboratorio_multi_limo_ackerman.launch.py  laboratorio_multi_limo_four_diff.launch.py
limo_bringup/launch/mundo_sdf/: model_circuito_limo_ackerman.launch.py  model_circuito_limo_four_diff.launch.py  model_laboratorio_limo_ackerman.launch.py  model_laboratorio_limo_four_diff.launch.py
limo_bringup/launch/rviz/: display_limo_ackerman.launch  display_limo_four_diff.launch
limo_bringup/models/Circuito/House/: model.config  (+1 more)
limo_bringup/models/Laboratorio/: model.config  model.sdf
limo_bringup/param/bridge/: one_limo.yaml
limo_bringup/worlds/: circuito.sdf  circuito_empty.sdf  laboratorio.sdf  model_circuito.sdf  model_laboratorio.sdf
limo_description/rviz/: model_display.rviz  multi_model_display_ackerman.rviz  multi_model_display_four_diff.rviz
limo_description/urdf/: limo_ackerman.gazebo  limo_ackerman.xacro  limo_four_diff.gazebo  limo_four_diff.xacro  limo_gazebo.gazebo  limo_gazebo_2.gazebo  limo_materials.xacro  limo_mecanum.gazebo  limo_mecanum.xacro  limo_steering_hinge.xacro  limo_xacro.xacro
limo_nav2/config/: circuito_lap_bt_tree.xml  circuito_lap_locations.yaml  navigation_nav2.rviz  slam_nav2.rviz
limo_nav2/config/maps/: circuito1.pgm  circuito1.yaml  circuito2.pgm  circuito2.yaml  circuito_map.pgm  circuito_map.yaml  labo1.pgm  labo1.yaml  labo_map.pgm  labo_map.yaml
limo_nav2/include/: circuito_vuelta.hpp  navigation_behaviors.hpp
limo_nav2/launch/: limo_localization.launch.py  limo_navigation.launch.py  limo_slam_toolbox.launch.py  provide_map.launch.py  provide_map_lifecycle.launch.py
limo_nav2/param/: ekf.yaml  navigation2.yaml  params_slam_toolbox.yaml
limo_nav2/src/: circuito_vuelta.cpp  navigation_behaviors.cpp
scripts/: nav2_test.py  start_slam_circuito_limo_ackerman..sh  start_slam_circuito_limo_four_diff.sh  start_slam_lab_limo_ackerman.sh  start_slam_lab_limo_four_diff.sh
(+63 files in other folders)
